# cmake_curl_gtest

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  bootstrap.cc  run.cc
cmake/module/: FindMICROHTTPD.cmake
httpd/: CMakeLists.txt  runhttpd.cc
tests/: CMakeLists.txt  api_test.cc  run_test.cc
